--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/mujaen/react-yarn-webpack5#readme",
   "packageManager": "yarn@3.2.0",
   "devDependencies": {
+    "typescript": "^4.6.4",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
   }
