--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,11 @@
     '@babel/preset-react',
     '@babel/preset-typescript'
   ],
-  "plugins": [
-    'babel-plugin-styled-components'
-  ]
+  "env": {
+    "development": {
+      "plugins": [
+        'babel-plugin-styled-components'
+      ]
+    }
+  },
 }
