--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
     "@types/styled-components": "^5.1.25",
     "babel-plugin-styled-components": "^2.0.7",
     "esbuild-loader": "^2.18.0",
