--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "esbuild-loader": "^2.18.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.6.2",
+    "react": "18.1.0",
+    "react-dom": "^18.1.0",
+    "react-is": "^18.1.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
