--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development node server/index.js",
-    "build": "NODE_ENV=production webpack --config webpack/webpack.base.config.js --progress"
+    "build": "NODE_ENV=production webpack --config webpack/webpack.prod.config.js --progress"
   },
   "repository": {
     "type": "git",
